# palm

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json
src/: config.rs  main.rs  middleware.rs  routes.rs
src/routes/: api.rs  frontend.rs  index.html
