[package]
name = "palm"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
poem = { version = "3.1.12", features = ["anyhow"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
reqwest = { version = "0.13.2", features = ["json"] }
time = { version = "0.3.47", features = ["serde", "formatting", "macros"] }
base64 = "0.22"
